--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 </head>
 <body>
     <div id="scene"></div>
-    <audio id="backgroundMusic" loop>
-  <source src="https://cdn.jsdelivr.net/gh/chatgpt-huynh/audio-host/Ni%20Ny%20C%20Anh%20Lyrics%20Video.mp3" type="audio/mpeg">
+    <audio id="backgroundMusic" loop preload="auto">
+  <source src="https://raw.githubusercontent.com/love-forever3/happy1911/main/music.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -143,11 +143,17 @@
     <script>
         const texts = [
             
-"Linh",
-"I love you♥",
-"Cảm ơn vì em đã xuất hiện♥",
-"♥Đồng ý làm người yêu anh nhé♥",
-"Anh nhớ em nhiều♥",
+
+"chúc anh 19 - 11 luôn vui vẻ và hạnh phúc 😊",
+"mãi iu anh",
+"chúc anh 19 - 11 luôn vui vẻ và hạnh phúc 😊",
+"mãi iu anh",
+                "chúc anh 19 - 11 luôn vui vẻ và hạnh phúc 😊",
+"mãi iu anh",
+                "chúc anh 19 - 11 luôn vui vẻ và hạnh phúc 😊",
+"mãi iu anh",
+                "chúc anh 19 - 11 luôn vui vẻ và hạnh phúc 😊",
+"mãi iu anh",
         ];
 
         const scene = document.getElementById("scene");
